Fixed Delete Product in Modal. A lot of Refactoring.

--- a/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
@@ -12,13 +12,13 @@
     <h4>Order</h4>
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.OrderId)
+            @Html.DisplayName("Order Id")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.OrderId)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Order.Date)
+            @Html.DisplayName("Date")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Order.Date)
@@ -36,13 +36,13 @@
             @Html.DisplayFor(model => model.Product.ProductName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Product.Price)
+            @Html.DisplayName("Price")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Product.Price)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
+            @Html.DisplayName("Quantity")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Quantity)
