--- a/WebShop/Areas/Admin/Views/OrderModel/DeleteOrder.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/DeleteOrder.cshtml
@@ -12,13 +12,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.OrderId)
+                @Html.DisplayName("Order Id")
             </th>
             <th>
                 @Html.DisplayName("User Name")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                @Html.DisplayName("Date")
             </th>
             <th></th>
         </tr>
