--- a/WebShop/Areas/Admin/Views/OrderModel/Details.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/Details.cshtml
@@ -9,10 +9,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Order.OrderId)
+                @Html.DisplayName("Order Id")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Order.Date)
+                @Html.DisplayName("Date")
             </th>
             <th>
                 @Html.DisplayName("User Name")
@@ -21,10 +21,10 @@
                 @Html.DisplayName("Product Name")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Product.Price)
+                @Html.DisplayName("Price")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductOrder.Quantity)
+                @Html.DisplayName("Quantity")
             </th>
             <th></th>
         </tr>
