--- a/WebShop/Areas/Admin/Views/OrderModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/Index.cshtml
@@ -10,22 +10,22 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.OrderId)
+                @Html.DisplayName("Order Id")
             </th>
             <th>
                 @Html.DisplayName("User Name")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User.Street)
+                @Html.DisplayName("Street")
             </th>
             <th>
                 @Html.DisplayName("Zip Code")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User.City)
+                @Html.DisplayName("City")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                @Html.DisplayName("Date")
             </th>
             <th></th>
         </tr>
