--- a/WebShop/Areas/Admin/Views/ProductModel/Create.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Create.cshtml
@@ -4,16 +4,14 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
-
-<h4>ProductModel</h4>
+<h2>Create Product</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
+                <label asp-for="ProductName" class="control-label">Product Name</label>
                 <input asp-for="ProductName" class="form-control" />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
