--- a/WebShop/Areas/Admin/Views/ProductModel/Delete.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Delete.cshtml
@@ -8,29 +8,29 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProductModel</h4>
+    <h4>Product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.DisplayName("Product Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ProductName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayName("Price")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayName("Description")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ImageName)
+            @Html.DisplayName("Image Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ImageName)
@@ -38,7 +38,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductId" />
+        <input type="hidden" asp-for="ProductId"/>
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
