--- a/WebShop/Areas/Admin/Views/ProductModel/Details.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Details.cshtml
@@ -7,29 +7,29 @@
 <h2>Details</h2>
 
 <div>
-    <h4>ProductModel</h4>
+    <h4>Product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.DisplayName("Product Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ProductName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayName("Price")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayName("Description")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ImageName)
+            @Html.DisplayName("Image Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ImageName)
