--- a/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="ProductId" />
             <input type="hidden" asp-for="ImageName" />
             <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
+                <label asp-for="ProductName" class="control-label">Product Name</label>
                 <input asp-for="ProductName" class="form-control" />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
