--- a/WebShop/Areas/Admin/Views/ProductModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Index.cshtml
@@ -13,16 +13,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ProductName)
+                @Html.DisplayName("Product Name")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayName("Price")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayName("Description")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageName)
+                @Html.DisplayName("Image")
             </th>
             <th></th>
         </tr>
