--- a/WebShop/Areas/Admin/Views/UserModel/Delete.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Delete.cshtml
@@ -8,17 +8,17 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>UserModel</h4>
+    <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayName("First Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayName("Last Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LastName)
