--- a/WebShop/Areas/Admin/Views/UserModel/Details.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Details.cshtml
@@ -3,35 +3,52 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>User Details</h2>
 
 <div>
-    <h4>UserModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayName("First Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayName("Last Name")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayName("Email")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.City)
+            @Html.DisplayName("Street")
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Street)
+        </dd>
+        <dt>
+            @Html.DisplayName("Zip Code")
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ZipCode)
+        </dd>
+        <dt>
+            @Html.DisplayName("City")
         </dt>
         <dd>
             @Html.DisplayFor(model => model.City)
+        </dd>
+        <dt>
+            @Html.DisplayName("Pgone nr")
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
     </dl>
 </div>
