--- a/WebShop/Views/Home/Index.cshtml
+++ b/WebShop/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
 @if (User.IsInRole("Admin"))
 {
-    <button type="button" class="btn btn-primary createButton" data-toggle="modal" data-target="#createProduct">Create game</button>
+    <button type="button" class="btn btn-primary createButton" data-toggle="modal" data-target="#createProduct">Create product</button>
 }
 
 <div class="modal fade" id="createProduct" tabindex="-1" role="dialog" aria-labelledby="createProductLabel" aria-hidden="true">
@@ -39,7 +39,7 @@
                 <form asp-action="Create" asp-controller="Home" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
-                        <label asp-for="ProductName" class="control-label"></label>
+                        <label asp-for="ProductName" class="control-label">Product Name</label>
                         <input asp-for="ProductName" class="form-control" />
                         <span asp-validation-for="ProductName" class="text-danger"></span>
                     </div>
