--- a/WebShop/Views/Shared/_partialCreateProduct.cshtml
+++ b/WebShop/Views/Shared/_partialCreateProduct.cshtml
@@ -1,15 +1,15 @@
-﻿@model ProductModel
+﻿@*@model ProductModel*@
 
 <!-- Modal content-->
-<div class="modal-content">
+<!--<div class="modal-content">
     <div class="modal-header">
         <h4 class="modal-title" id="createProductLabel">Create product</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
-    </div>
+    </div>-->
     <!-- Main modal -->
-    <div class="modal-body">
+    <!--<div class="modal-body">
         <form asp-action="Create" asp-controller="Home" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -40,4 +40,4 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
     </div>
-</div>
+</div>-->
