--- a/WebShop/Views/Shared/_partialDeleteProduct.cshtml
+++ b/WebShop/Views/Shared/_partialDeleteProduct.cshtml
@@ -3,57 +3,50 @@
 <!-- Modal content-->
 <div class="modal-content">
     <div class="modal-header">
-        <h4 class="modal-title" id="deleteProductLabel">Delete product</h4>
+        <h2 class="modal-title" id="deleteProductLabel">Delete product</h2>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <!-- Main modal -->
     <div class="modal-body">
-        @*<h2>Delete</h2>
-
         <h3>Are you sure you want to delete this?</h3>
         <div>
-            <h4>ProductModel</h4>
+            <h4>Product</h4>
             <hr />
             <dl class="dl-horizontal">
                 <dt>
-                    @Html.DisplayNameFor(model => model.ProductName)
+                    @Html.DisplayName("Product Name")
                 </dt>
                 <dd>
                     @Html.DisplayFor(model => model.ProductName)
                 </dd>
                 <dt>
-                    @Html.DisplayNameFor(model => model.Price)
+                    @Html.DisplayName("Price")
                 </dt>
                 <dd>
                     @Html.DisplayFor(model => model.Price)
                 </dd>
                 <dt>
-                    @Html.DisplayNameFor(model => model.Description)
+                    @Html.DisplayName("Description")
                 </dt>
                 <dd>
                     @Html.DisplayFor(model => model.Description)
                 </dd>
                 <dt>
-                    @Html.DisplayNameFor(model => model.ImageName)
+                    @Html.DisplayName("Image Name")
                 </dt>
                 <dd>
                     @Html.DisplayFor(model => model.ImageName)
                 </dd>
-            </dl>*@
-            <form asp-action="Delete" asp-controller="Home">
+            </dl>
+            <form asp-action="DeleteConfirmed" asp-controller="Home">
                 <div class="form-group">
-                    <input type="hidden" asp-for="ImageName">
-                    <input type="hidden" asp-for="Description">
                     <input type="hidden" asp-for="ProductId">
-                    <input type="hidden" asp-for="ProductName">
-                    <input type="hidden" asp-for="Price">
                     <input type="submit" value="Delete" class="btn btn-default" />
                 </div>
             </form>
-        </div>
-        
+        </div>        
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
