--- a/WebShop/Views/Shared/_partialEdit.cshtml
+++ b/WebShop/Views/Shared/_partialEdit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="ProductId" />
             <input type="hidden" asp-for="ImageName" />
             <div class="form-group">
-                <label asp-for="ProductName" class="control-label">Product name</label>
+                <label asp-for="ProductName" class="control-label">Product Name</label>
                 <input asp-for="ProductName" class="form-control" placeholder="@Model.ProductName"/>
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
@@ -35,7 +35,7 @@
         </form>
         <hr />
         <!-- Image -->
-        <label for="product-image" class="col-form-label">Product image:</label>
+        <label for="product-image" class="col-form-label">Image</label>
         <div class="row">
             <div class="col-md-4">
                 <form asp-action="UploadImage" enctype="multipart/form-data">
@@ -53,7 +53,5 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        @*<input type="submit" onclick="location.href = '@Url.Action("Index", "Home")'" class="btn btn-primary" name="btnCancel" value="Cancel" />*@
-        @*<button type="button" class="btn btn-primary">Save changes</button>*@
     </div>
 </div>
