--- a/WebShop/Views/Shared/_partialEdit.cshtml
+++ b/WebShop/Views/Shared/_partialEdit.cshtml
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Description</label>
-                <input asp-for="Description" class="form-control"  placeholder="@Model.Description"/>
+                @Html.TextAreaFor(model => model.Description, new { @class = "form-control", @rows = 4 })
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
