--- a/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
@@ -4,13 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
-
 <hr />
-<h4>ProductModel</h4>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" class="editProduct">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
             <input type="hidden" asp-for="ImageName" />
