--- a/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
@@ -4,13 +4,12 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Product</h2>
 
 <hr />
-<h4>ProductModel</h4>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" class="editProduct">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
             <input type="hidden" asp-for="ImageName" />
@@ -25,8 +24,8 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <label asp-for="Description" class="control-label">Description</label>
+                @Html.TextAreaFor(model => model.Description, new { @class = "form-control", @rows = 4 })
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
