--- a/WebShop/Views/Shared/_partialEdit.cshtml
+++ b/WebShop/Views/Shared/_partialEdit.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label">Price</label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger" placeholder="@Model.Price"></span>
+                <input asp-for="Price" class="form-control" placeholder="@Model.Price" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Description</label>
