--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -70,6 +70,10 @@
             </main>
             <footer>
                 <p class="text-center">
+                    Contact: +467-123 45 67 (Mo-Fr 8am-5pm)<br />
+                    Email: admin@admin.com
+                </p>
+                <p class="text-center">
                     &#9400; @DateTime.Now.ToShortDateString() Group 2
                 </p>
             </footer>
